Fixed a bug with the Prev and Next Buttons
Made it so when at the Start/End of the list it and Prev/Next is clicked it just returns the  First/Last 10 entries

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 CSCI150_Project_Pages/.vs/slnx.sqlite
 CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/v16/.suo
 CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/v16/.suo
+*.sqlite
