--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ CSCI150_Project_Pages/.vs/slnx.sqlite
 CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/v16/.suo
 CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/v16/.suo
 *.sqlite
+*.sqlite
+CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/v16/.suo
+CSCI150_Project_Pages/.vs/CSCI150_Project_Pages/config/applicationhost.config
